chore: merge dev into main (#2)
* feat(heroku): add the Heroku config (#1)

* feat(heroku): add Heroku config & configure `Dockerfile`

* fix(port): use $PORT to expose the app

* chore(swagger): hide the model definition

* chore(naming): name `refresh` by `sync`
